--- a/VRChat/77/1297377.html
+++ b/VRChat/77/1297377.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XCbJKThh84EiBAk27+MOLjxctwWRgt0eUX62IzBbG1g="></script>
+    "eLXTpqj7LdAjbN96P6rc6yeeg/aRMuse6cyz136xBPI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】火を吐く赤ん坊","description":"△10438ポリゴン！Good!\n炎を吐く赤ちゃん。\n赤ちゃん集会はこれで出ました。\n一応Humanoid形式ですが実質Genericモデル、火はロックンロールで出ます\n\nUnlit_WF設定、同梱あり\n\n禁止事項\n・当ファイル作者が不利益を被るような当ファイルの全部もしくは一部の再配布\n\nご質問等ありましたら下記URLからどうぞ\nhttps://twitter.com/5old_of_the_Sun","url":"https://booth.pm/ja/items/1297377","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/679000b4-9c75-45d2-9701-013391f87abc/i/1297377/204ec385-7fba-4dcd-90d3-30a1fea3d2de_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XCbJKThh84EiBAk27+MOLjxctwWRgt0eUX62IzBbG1g="></script>
+    nonce="eLXTpqj7LdAjbN96P6rc6yeeg/aRMuse6cyz136xBPI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -429,9 +429,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
