--- a/VRChat/46/1295846.html
+++ b/VRChat/46/1295846.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "85zo23xvL1yk22EEn7pNSwm/XRwpLdgOfSdBgFN0vFE="></script>
+    "KnahAYtdwBiASALixHHKysIYwwQlL2eZAeTU8nds+RY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】プラン / プラン Lite 【セット】","description":"明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。\n\n◆ [2022/5/5] VRChat SDK3.0, Physics Bone対応しました\n\n● 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．\nLite版のみは別ページ( https://sporadic-e.booth.pm/items/1445662 )にて行っています．併せて参考にしてください．\n\n● VRChatでのアバターとしての利用を想定しており、以下のワールドで試着が可能です。\nhttps://vrchat.com/home/world/wrld_58e23f4d-d23c-4839-a367-6c746ca473be\n\n● また，サポートや質問用のDiscordを設けているので，参加していただけると幸いです．更新連絡もスムーズになる他， WIPなプロジェクトの進捗を見ることができます． \nhttps://discord.gg/ShwP4Mj","url":"https://booth.pm/ja/items/1295846","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1295846/b3ab23c1-99f6-4be5-b334-cebd6e59a36c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="85zo23xvL1yk22EEn7pNSwm/XRwpLdgOfSdBgFN0vFE="></script>
+    nonce="KnahAYtdwBiASALixHHKysIYwwQlL2eZAeTU8nds+RY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -711,9 +711,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
