--- a/VRChat/42/1296842.html
+++ b/VRChat/42/1296842.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TSZIrpwXQZv6Sv8uFbihruNCau4lb04yaFCjgjHqOXI="></script>
+    "Hzr7MYYMIVTGBA0b3vfkmGrZ/2L8CfUIEcJwh+k/UHM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCCamController","description":"# VRCCamController\nVRChat にアバターをアップロードするときの Upload Image に指定した画像を表示させるのを簡単にするスクリプトと、そのスクリプトをくっつけたプレハブです。\n\n## 使い方\n1. ダウンロードした zip ファイルを解凍して出てくる `VRCCamController.unitypackage` を実行して、 Unity へファイルを読み込んでください\n2. 読み込まれた `Assets/Plugins/KmnkTools/VRCCamController/VRCCamController` のプレハブ（青い立方体のアイコン）をアップロード用のモデルを設定しているシーンにドラッグアンドドロップしてください\n3. 表示したい画像を用意して、 Unity の `Project` タブのどこかに放り込んで読み込ませてください\n4. 読み込まれた画像を選択すると `Inspector` タブに詳細設定が表示されるので、 `Texture Type` を `Sprite (2D and UI)` に設定して、 `Apply` を押して適用してください\n5. `Hierarchy` タブで 2 でシーンに置いた `VRCCamController` を選択して `Inspector` タブの `Image Sprite` に準備した画像をドラッグアンドロップしてください \n6. 普段モデルをアップロードする時のように `VRChat` タブの `Buld \u0026 Publish` を押して、 `Game` タブに表示される UI の `Upload Image` にチェックを入れると、指定した画像が表示されるはずなので、 `VRCCamController` の `Size` で大きさを調整してください\n7. 良い感じになったら、いつもどおりアップロードしてください\n\n## 何をしているのか\nアップロード用のスクリーンショットを撮るカメラ（ `VRCCam` ）を探して、ちょっとそれっぽく設定をいじっているだけです。  \nですので、手動でも同じことはできます。あくまで、簡単化のスクリプトです。\n\n## その他\n- もしご要望があれば、お知らせいただければできる範囲で対応します\n- 簡単なことしかやっていないので、適当に改造して使ってみてください\n- もし追加したい機能差分があれば [Github リポジトリ](https://github.com/kmnk/VRCCamController) に PullRequest して頂ければ確認します\n\n## License\nMIT License","url":"https://booth.pm/ja/items/1296842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5732517f-498d-45e3-b6b7-fd8ead6991fd/i/1296842/a9972edc-a6d8-45e3-bef4-7682ed4c368a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TSZIrpwXQZv6Sv8uFbihruNCau4lb04yaFCjgjHqOXI="></script>
+    nonce="Hzr7MYYMIVTGBA0b3vfkmGrZ/2L8CfUIEcJwh+k/UHM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -386,9 +386,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
