--- a/VRChat/24/1295824.html
+++ b/VRChat/24/1295824.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "x/qf4Zwq3RnTIAEoytpBh/eFDCINczZgcGfIQydOIoA="></script>
+    "Agv2e7/aFE7q1WobKslqn/DxBfRKgqjqyeIQiGyO2BU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"無料配布【VRoid＆セシル変身】 Yシャツ【ワンピース用テクスチャ】","description":"【利用契約および設定方法】\n※ご購入前にお読みください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\nセシル変身用に使ったり。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nなおクレジット表記は任意で大丈夫です。\n気にせずお使いください！\n\nあなたの理想を形に。\n『犬子屋』はVRoid活動を応援しています。\n\n追記。\nショップ、ツイッターのフォロー、ハートマークのプッシュをお願いします！\nリツイートやいいねも待ってます！\n制作者の励みになります！\n↓こちらだよ(≧∇≦)\nhttps://twitter.com/Isekaiinuko?s=09\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1295824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1295824/e652c403-7d06-4acf-9065-7c5dea5852c7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="x/qf4Zwq3RnTIAEoytpBh/eFDCINczZgcGfIQydOIoA="></script>
+    nonce="Agv2e7/aFE7q1WobKslqn/DxBfRKgqjqyeIQiGyO2BU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -360,9 +360,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
