--- a/VRChat/71/1294471.html
+++ b/VRChat/71/1294471.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/7UwoW3jXOwdzuo4sQx4YJ8Xwn5G92ITq2YG32SwCe4="></script>
+    "liW7l0TzPyHdYKFzHMQBICJO4WD4DXJOm90E5d8oppw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料配布】1st EP [Mandara]","description":"バーチャルハンドパン奏者SIGMAΣによる1st EP。三千世界を覗き見て描いたインプロヴァイズ楽曲を4曲収録。\n\nトラックリスト\n1.Gravitys\n2.Dimension\n3.Devastate\n4.Faith\n\n投げ銭版限定ボーナストラック\n5.Deeper Night(Xystran feat. SIGMAΣ)\n\n\n規約\n・収録曲の有償二次配布、自作発言を禁止します。それ以外ならだいたいなんでもOKです\n・VRChatのワールドや各種BGMなどでご利用の際にはご一報いただけるとめちゃくちゃ喜びます","url":"https://booth.pm/ja/items/1294471","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5e3bdf99-d507-4e33-adb3-7284dd34cb3f/i/1294471/181a5b4e-4e85-4943-a8b5-d00f3d3e4ce3_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/7UwoW3jXOwdzuo4sQx4YJ8Xwn5G92ITq2YG32SwCe4="></script>
+    nonce="liW7l0TzPyHdYKFzHMQBICJO4WD4DXJOm90E5d8oppw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -623,9 +623,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
